<resources>
    <string name="app_name">TridentSmart</string>
    <string name="loginscreen_title1">Trident</string>
    <string name="loginscreen_title2">Smart Home - Things</string>
    <string name="TextView_ForgotPassword">Parolayı Unuttum</string>
    <string name="Button_Login">Oturum Aç</string>
    <string name="TextView_CreateAnAccount">Hesap oluştur</string>
    <string name="hint_EditText_UserName">Cep telefonu numarası/e-posta adresi</string>
    <string name="hint_EditText_Password">Parola</string>
    <string name="CheckBox_showPassword">Parolayı göster</string>
    <string name="hint_email">E-Posta</string>
    <string name="hint_MobileNumber">Cep telefonu numarası</string>
    <string name="Agree_to">Kabul ediyorum </string>
    <string name="Agree_explanation">Kullanım şartları, Hizmet Sözleşmesi</string>
    <string name="get_verification_code">Doğrulama kodu al</string>
    <string name="Create_Account">Hesap oluştur</string>
    <string name="Sign_up_byEmail">E-posta ile kaydol</string>
    <string name="Sign_up_byMnumber">Telefon ile kaydol</string>
    <string name="by_EMail">E-posta ile</string>
    <string name="by_MobileNumber">Telefon ile</string>
    <string name="msg_agree_alert">Lütfen \"Hizmet Sözleşmesi\"ni onaylayınız.</string>
    <string name="label_enter_verification_code">Doğrulama kodu girin</string>
    <string name="msg_invalid_email">Geçersiz E-posta</string>
    <string name="msg_invalid_email_or_pnumber">Geçersiz E-posta veya Telefon numarası. Lütfen bilgileri kontrol ediniz.</string>
    <string name="verification_code_explanation1">E-posta adresinize bir doğrulama kodu gönderildi:</string>
    <string name="send_again">Tekrar Gönder</string>
    <string name="ok">Tamam</string>
    <string name="msg_verification_code_missing">Doğrulama kodu eksik.Lütfen tamamlayınız.</string>
    <string name="label_forgot_the_password">Parolayı unuttum</string>
    <string name="button_get_verification_code">Doğrulama kodu al</string>
    <string name="toast_msg_push_again">Çıkmak için tekrar dokun</string>
    <string name="button_add_device">Cihaz Ekle</string>
    <string name="no_device_yet">Henüz hiçbir cihaz yok,lütfen ekleyin</string>
    <string name="home_management">EV YÖNETİMİ</string>
    <string name="home_management2">Ev Yönetimi</string>
    <string name="add_family">Aile Ekle</string>
    <string name="done">Tamamla</string>
    <string name="family_name">Aile Adı</string>
    <string name="family">Aile</string>
    <string name="family_location">Aile konumu</string>
    <string name="enter_the_family_name">Aile adını yazın</string>
    <string name="label_set_family_location">Aile Coğrafi konumu ayarla</string>
    <string name="add_room">Başka bir oda ekle</string>
    <string name="add_Room">Oda Ekle</string>
    <string name="all_devices">Tüm Cihazlar</string>
    <string name="family_settings">Aile Ayarları</string>
    <string name="family_members">Aile Üyeleri</string>
    <string name="add_member">Üye ekle</string>
    <string name="add">Ekle</string>
    <string name="remove_family">Aileyi Kaldır</string>
    <string name="remove_member">Üyeyi Kaldır</string>
    <string name="room_management">Oda Yönetimi</string>
    <string name="room_settings">Oda ayarları</string>
    <string name="save">Kaydet</string>
    <string name="donotsave">Kaydetme</string>
    <string name="cancel">İptal</string>
    <string name="confirm">Onayla</string>
    <string name="Edit">Düzenle</string>
    <string name="EditAndDone">Düzenle/Tamamla</string>
    <string name="msg_Please_enter_room_name">Lütfen oda adı girin</string>
    <string name="msg_Please_enter_family_name">Lütfen aile adı girin</string>
    <string name="Room_Name">Oda Adı</string>
    <string name="Recommended">Önerilen</string>
    <string name="Living_Room">Oturma Odası</string>
    <string name="Bedroom">Yatak Odası</string>
    <string name="Second_Bedroom">İkinci Yatak Odası</string>
    <string name="Dining_Room">Yemek Odası</string>
    <string name="Kitchen">Mutfak</string>
    <string name="Study_Room">Çalışma Odası</string>
    <string name="Porch">Sundurma</string>
    <string name="Balcony">Balkon</string>
    <string name="Kids_Room">Çocuk Odası</string>
    <string name="Cloakroom">Vestiyer</string>
    <string name="msg_saveroomchanges">Oda için yapılan değişiklikler kaydedilsin mi?</string>
    <string name="devices_not_in_room">Bu odada cihaz yok</string>
    <string name="x1_devices_in_this_room">Bu odada </string>
    <string name="x2_devices_in_this_room"> adet cihaz var</string>
    <string name="name">Adı</string>
    <string name="profile_photo">Profil resmi</string>
    <string name="linked_account">Bağlanan hesap</string>
    <string name="set_family_administrator">Aile yöneticisi olarak ayarla</string>
    <string name="set_as_administrator">Yönetici olarak ayarla</string>
    <string name="on">Açık</string>
    <string name="off">Kapalı</string>
    <string name="modify_name">Adı Değiştir</string>
    <string name="title_select_image_from_gallery">Galeriden Resim Seç</string>
    <string name="title_select_image_from_gallery_or_camera">Galeriden veya Kameradan Resim Seç</string>
    <string name="msg_success">Başarılı</string>
    <string name="country_region">Ülke/Bölge</string>
    <string name="account">Hesap numarası</string>
    <string name="account_hint">Cep telefon numarası veya email</string>
    <string name="member_page_info1">Hesaplar bağlandıktan sonra aile üyeleri cihazı yönetebilir</string>
    <string name="member_page_info2">Eklendikten sonra o telefon numarası ile kayıtlı hesaplarla aileye giriş yapabilirsiniz.
        Aile yöneticisine tam erişimin verilmesi,tüm ailenin silinmesi de dahildir.Düzenli üyeler sadece görünümleri ve cihazları işletebilir;
        ekleme ve çıkarmalarına izin verilmez.
    </string>
    <string name="add_family_page_info">Sonrasında istediğiniz zaman oda ayarlarını değiştirebilirsiniz</string>
    <string name="choose_country_and_region">Ülke/bölge seçin</string>
    <string name="search">Ara</string>
    <string name="not_linked">Bağlı değil</string>
    <string name="device">Cihaz</string>
    <string name="administrator">Yönetici</string>
    <string name="user">Kullanıcı</string>
    <string name="remove_member_dialog_title">Bu üyeyi kaldırmak istediğinizden emin misiniz?</string>
    <string name="remove_member_dialog_info">Üye silindikten sonra,evinizdeki cihazları ve görünümleri kontrol edemez.</string>
    <string name="remove_family_dialog_title">Aileden ayrılamıyor</string>
    <string name="remove_family_dialog_info">Ailedeki tek yönetici sizsiniz,lütfen ayrılmadan önce başka aile üyelerini yönetici olarak ayarlayın.</string>
    <string name="home">Evim</string>
    <string name="smart">Akıllı</string>
    <string name="me">Ben</string>
    <string name="add_schedule">Program Ekle</string>
    <string name="edit_schedule">Programı Düzenle</string>
    <string name="empty_schedule_list">Boş Program Listesi</string>
    <string name="schedule_accuracy">Program tutarlılığı -/+ 30 saniyedir</string>
    <string name="schedule">Program</string>
    <string name="schedules">Programlar</string>
    <string name="delete_item">Silmek istediğinize emin misiniz?</string>
    <string name="delete">Sil</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="repeat">Tekrarla</string>
    <string name="switchh">Switch</string>
    <string name="only_once">Sadece bir kez</string>
    <string name="everyday">Her gün</string>
    <string name="work_day">İş günü</string>
    <string name="weekend">Hafta sonu</string>
    <string name="repeat_page_info">Hiçbiri seçili değilse sadece bir kez çalıştır</string>
    <string name="details_of_device">Cihaz Ayrıntıları</string>
    <string name="restore_factory_setting">Fabrika ayarlarını geri yükle</string>
    <string name="remove_device">Cihazı Kaldır</string>
    <string name="device_name">Cihaz adı</string>
    <string name="device_location">Cihaz yeri</string>
    <string name="check_device_network">Ağı kontrol et</string>
    <string name="check_now">Şimdi denetle</string>
    <string name="share_device">Paylaşılan cihazlar</string>
    <string name="create_group">Grup oluştur</string>
    <string name="device_information">Cihaz bilgileri</string>
    <string name="feedback">Geri bildirim</string>
    <string name="check_for_firmware_upgrades">Ürün yazılımı yükseltmelerini denetle</string>
    <string name="other">Diğer</string>
    <string name="others">Diğerleri</string>
    <string name="basic_information">Cihaz hakkında temel bilgiler</string>
    <string name="rename">Tekrar adlandır</string>
    <string name="CDN_check_device_network">Ağ durumunu kontrol et</string>
    <string name="CDN_detecting_network">Ağ algılanıyor...</string>
    <string name="CDN_connect_with_the_device">Cihaza Bağlan</string>
    <string name="CDN_get_device_wifi_signal_strength">Cihazın Wi-Fi sinyal gücünü al</string>
    <string name="CDN_detect_network_connection_status">Ağ bağlantı durumunu tespit et</string>
    <string name="CDN_poor">Zayıf ağ koşulları</string>
    <string name="CDN_re_test">TESTi TEKRARLA</string>
    <string name="CDN_no_device_detected">Cihaz tespit edilmedi</string>
    <string name="CDN_no_device_detected_info">Lütfen telefon ve cihazınızın aynı Wi-Fi\'a bağlı olduğundan emin olun.\n
        Cihazınız zaten telefonunuz ile aynı Wi-Fi\'a bağlıysa lütfen ağ bağlantı noktanızın ve UDP ayarlarınızın doğru olup olmadığını kontrol edin.
    </string>
    <string name="shared_device">Paylaşılan Cihazlar</string>
    <string name="add_sharing">Paylaşım Ekle</string>
    <string name="shared_info1">Evde sürekli yaşayan bir kişi varsa,o kişiyi aile üyesi olarak ayarlamanız önerilir,böylece tüm cihazları ve akıllı görünümleri paylaşabilir.</string>
    <string name="shared_info2">Paylaşılan cihaz yok,lütfen ekleyin</string>
    <string name="select_device">Aygıt Seçin</string>
    <string name="create_devices_group_info">Yeni grup oluşturulduğunda eş zamanlı kontrol mevcut olacak</string>
    <string name="create_devices_group_msg">Lütfen en az bir cihaz seçin</string>
    <string name="create_devices_group_dialog_title">Lütfen grup adı girin</string>
    <string name="create_devices_group_dialog_extra">Grubu</string>
    <string name="virtual_id">Sanal Kimlik</string>
    <string name="ip_address">IP Adresi</string>
    <string name="mac_address">Ma Adresi</string>
    <string name="device_time_zone">Cihaz Saat Dilimi</string>
    <string name="wifi_signal_strength">Wi-Fi Sinyal Gücü</string>
    <string name="copied">Kopyalandı</string>
    <string name="not_yet_completed">Henüz tamamlanmadı</string>
    <string name="notification">Bildirim</string>
    <string name="notifications">Bildirimler</string>
    <string name="remove_device_msg">Cihazı kaldırmak istediğinizden emin misiniz?</string>
    <string name="restore_factory_settin_msg">Cihazın fabrika ayarları geri yüklendikten sonra cihaz,cihaz listesinden silinecek ve tüm ilgili veriler kaldırılacak</string>
    <string name="group_details">Grup Ayrıntıları</string>
    <string name="dismiss_group">Grubu Reddet</string>
    <string name="modify_group_name">Grup Adını Değiştir</string>
    <string name="from">Başlangıç</string>
    <string name="to">Bitiş</string>
    <string name="add_devicepage_title">Cihaz Ekle\n(manuel olarak)</string>
    <string name="search_device">Cihaz Ara</string>
    <string name="electrical_switches">Anahtarlar</string>
    <string name="lighting">Aydınlatma</string>
    <string name="large_home_appliance">Beyaz Eşya</string>
    <string name="small_home_appliance">Küçük\nEv Aletleri</string>
    <string name="kitchen_appliance">Mutfak\nAletleri</string>
    <string name="security_sensor">Güvenlik &amp;\nKoruma</string>
    <string name="wearable_health">Giyilebilir &amp;\nSağlık</string>
</resources>