<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_White1"
    tools:context="com.example.trident.smart.ActivityAddDevices">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="406dp"
        android:layout_height="55dp"
        android:background="@color/color_White"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp">

        <LinearLayout
            android:id="@+id/linearLayout_Back"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:gravity="center">
            <Button
                android:id="@+id/button_Back"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:background="@drawable/back"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_marginTop="-10dp"
            android:text="@string/add_devicepage_title"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="17dp"
            android:textStyle="bold" />  <!--style="?android:attr/borderlessButtonStyle" -->
        <Button
            android:id="@+id/button_SearchDevice"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search_device"
            android:textSize="17dp"
            android:visibility="gone"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_GoToQRCodeScanPage"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="59dp"
            android:layout_height="match_parent"
            android:text="[--]"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="614dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="515dp"
                android:background="@color/color_White1">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_ElectricalSwitches"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:onClick="tabCategoriOfProductsButtonClickHandler"
                        android:background="@color/color_White1"
                        android:textColor="@color/color_Gray"
                        android:text="@string/electrical_switches"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/button_Lighting"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:onClick="tabCategoriOfProductsButtonClickHandler"
                        android:background="@color/color_White1"
                        android:textColor="@color/color_Gray"
                        android:text="@string/lighting"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/button_LargeHomeAppliance"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@color/color_White1"
                        android:textColor="@color/color_Gray"
                        android:text="@string/large_home_appliance"
                        android:onClick="tabCategoriOfProductsButtonClickHandler"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/button_SmallHomeAppliance"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:onClick="tabCategoriOfProductsButtonClickHandler"
                        android:background="@color/color_White1"
                        android:textColor="@color/color_Gray"
                        android:text="@string/small_home_appliance"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/button_KitchenAppliance"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@color/color_White1"
                        android:textColor="@color/color_Gray"
                        android:text="@string/kitchen_appliance"
                        android:onClick="tabCategoriOfProductsButtonClickHandler"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/button_SecuritySensor"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@color/color_White1"
                        android:textColor="@color/color_Gray"
                        android:text="@string/security_sensor"
                        android:onClick="tabCategoriOfProductsButtonClickHandler"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/button_WearableHealth"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@color/color_White1"
                        android:textColor="@color/color_Gray"
                        android:text="@string/wearable_health"
                        android:onClick="tabCategoriOfProductsButtonClickHandler"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/button_Other"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@color/color_White1"
                        android:textColor="@color/color_Gray"
                        android:text="@string/other"
                        android:onClick="tabCategoriOfProductsButtonClickHandler"
                        android:textAllCaps="false"/>

                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout_ProductBase"
            android:layout_width="0dip"
            android:layout_height="515dp"
            android:layout_weight="0.7"
            android:background="@color/color_White" />
    </LinearLayout>







</android.support.constraint.ConstraintLayout>
