<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_White1"
    tools:context="com.example.trident.smart.ActivityAddMember">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="406dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@color/color_White"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp">

        <LinearLayout
            android:id="@+id/linearLayout_Back"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:gravity="center">
            <Button
                android:id="@+id/button_Back"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:background="@drawable/back"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="223dp"
            android:layout_height="match_parent"
            android:text="@string/add_member"
            android:textAllCaps="false"
            android:textSize="20dp" />  <!--style="?android:attr/borderlessButtonStyle" -->
        <Button
            android:id="@+id/button_Add"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:enabled="false"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="395dp"
        android:layout_height="147dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_White"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/color_Black" />

            <EditText
                android:id="@+id/editText_NameOfMember"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Aile üyesi adını girin"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/profile_photo"
                android:textColor="@color/color_Black" />

            <ImageView
                android:id="@+id/imageView_MemberProfilePhoto"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:padding="6dp"
                android:src="@drawable/family_members_orange" />

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_MemberProfilePhoto_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="3dp"
                    android:padding="6dp"
                    android:src="@drawable/arrow_more" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_White1"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/member_page_info1"
            android:textSize="13dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="395dp"
        android:layout_height="167dp"
        android:layout_marginTop="192dp"
        android:background="@color/color_White"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/country_region"
                android:textColor="@color/color_Black" />

            <TextView
                android:id="@+id/textView_CountryAndRegion"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="Turkey+90" />

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_CountryAndRegion_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="3dp"
                    android:padding="6dp"
                    android:src="@drawable/arrow_more" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/account"
                android:textColor="@color/color_Black" />

            <EditText
                android:id="@+id/editText_Account"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/account_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/set_as_administrator"
                android:textColor="@color/color_Black" />

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchButton_SetAsAdministrator"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:padding="6dp"
                    android:layout_marginTop="7dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="134dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_White1"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/member_page_info2"
            android:textSize="13dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
